# cpp_cheatsheet

./: CMakeLists.txt
app/counter/: counter_app.cc
basic/: CMakeLists.txt
basic/class/: CMakeLists.txt  README.md  constructor.cc  polymorphism.cc
basic/concept/: concept_example.cc
basic/initialization/: CMakeLists.txt  initialization.cc
basic/pointer/: CMakeLists.txt  pointer_basic.cc
basic/template/: sfinae.cc  template_basic.md  traits_examples.cc
cmake/: CompileFiles.cmake
common/: blocking_queue.h  print_helper.h
idioms/: CMakeLists.txt
idioms/compiletime/: ctime_for.cc  ctime_msg.cc
idioms/functor/: CMakeLists.txt  class_functor.cc
idioms/mem_mountain/: CMakeLists.txt  cache_mountain.cc  mountain.c
idioms/pipeline/: basic_pipeline.cc
idioms/polymorphism/: poly_test.cc
idioms/ringbuffer/: ringbuffer.h
idioms/type_eraser/: type_eraser.cc  type_eraser.h
libtest/: CMakeLists.txt
libtest/register_staticlib/: CMakeLists.txt  derived_entry_a.cc  derived_entry_a.h  entry.h  register.cc  register.h  register_example.cc
std/: CMakeLists.txt
std/cpp17/: CMakeLists.txt  CTAD_extension.cc  aggregate_init.cc  attributes.cc  auto_template.cc  constexpr_if.cc  fold_expression.cc  if_init_statement.cc  inline.cc  lambda_extension.cc  mandatory_copy_elision.cc  structured_binding.cc  using.cc
stl/: CMakeLists.txt
stl/file_system/: CMakeLists.txt  file_system_basic.cc
stl/move_forward/: forward_test.cc
stl/pmr/: TrackNew.h  pmr.cc
stl/priority_queue/: basic.cc
stl/smart_ptr/: CMakeLists.txt  shared_ptr_cycle.cc  shared_ptr_impl.cc  unique_ptr_basic.cc
stl/string_view/: string_view_basic.cc  string_view_note.cc
stl/variant/: variant_basic.cc
stl/variant_optional/: optional.cc  variant_basic.cc  variant_visit.cc
stl/variant_optional_any/: any.cc
temp/: main.cc
